<resources>
    <string name="app_name">HeadHunter</string>
    <string name="title_home">Отклики</string>
    <string name="title_dashboard">Сообщения</string>
    <string name="title_notifications">Профиль</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="et_text">Должность, ключевые слова</string>
    <string name="vacancies">Вакансии для вас</string>
    <string name="btn_text">Откликнуться</string>
    <string name="correspondence">По соответствию</string>
</resources>