<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/mainFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.headhunter.ui.nothing.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.headhunter.ui.nothing.responses.ResponsesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.headhunter.ui.nothing.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.headhunter.ui.main.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.example.headhunter.ui.favourites.FavouritesFragment"
        android:label="fragment_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>